CSVParser reviews
- Removed build dependency of opencsv
- Unit tests, lots of fixes and improvements to CSVParser